--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -1,6 +1,10 @@
-set(projname "zbarpy")
+set(projname "zbar")
 
 project(${projname})
+
+include_directories("c:/Anaconda/include")
+link_directories("c:/Anaconda/libs")
+FIND_PACKAGE(PythonLibs)
 
 set(srcs zbarmodule.c
 	enum.c
@@ -21,7 +25,8 @@ source_group("include" FILES ${hdrs})
 source_group("src" FILES ${srcs})
 
 add_library(${projname} SHARED ${srcs} ${hdrs})
-target_link_libraries(${projname} libzbar)
+set_target_properties(${projname} PROPERTIES SUFFIX ".pyd")
+target_link_libraries(${projname} libzbar python27)
 
 
 
