snprintf -> _snprintf with MSVC2013

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,7 +62,7 @@ CHECK_INCLUDE_FILES(X11/extensions/Xvlib.h HAVE_X11_EXTENSIONS_XVLIB_H)
 
 if (MSVC)
 	set(inline ON)
-	
+	set(snprintf ON)  #_snprintf
 	add_subdirectory("win-iconv")
 	include_directories("win-iconv")
 	link_directories("${CMAKE_CURRENT_BINARY_DIR}/win-iconv")
@@ -73,7 +73,7 @@ configure_file("${CMAKE_CURRENT_SOURCE_DIR}/include/config.h.in"
 			   "${CMAKE_CURRENT_SOURCE_DIR}/include/config.h")
 
 add_subdirectory(zbar)
-add_subdirectory(examples)
+#add_subdirectory(examples)
 add_subdirectory(python)
 
 
