--- a/include/config.h.in
+++ b/include/config.h.in
@@ -203,6 +203,9 @@
 #cmakedefine inline __inline
 #endif
 
+/* _snprintf instead of snprintf with MSVC 2013 */
+#cmakedefine snprintf _snprintf
+
 /* Define to the type of a signed integer type of width exactly 32 bits if
    such a type exists and the standard includes do not define it. */
 #cmakedefine int32_t @INT32_TYPE@
